lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instructions
Rule 2     instructions -> instr
Rule 3     instructions -> instructions instr
Rule 4     instr -> instr_assign ;
Rule 5     instr -> statement ;
Rule 6     instr -> { instructions }
Rule 7     instr -> IF ( condition ) instr
Rule 8     instr -> IF ( condition ) instr ELSE instr
Rule 9     statement -> RETURN expr
Rule 10    condition -> expr > expr
Rule 11    condition -> expr < expr
Rule 12    condition -> expr EQ expr
Rule 13    condition -> expr NEQ expr
Rule 14    condition -> expr LEQ expr
Rule 15    condition -> expr GEQ expr
Rule 16    instr -> FOR id = range instr
Rule 17    range -> expr : expr
Rule 18    instr -> WHILE ( expr ) instr
Rule 19    statement -> BREAK
Rule 20    statement -> CONTINUE
Rule 21    str -> STRING
Rule 22    statement -> PRINT printables
Rule 23    printables -> printable
Rule 24    printables -> printables , printable
Rule 25    printable -> expr
Rule 26    assign_operator -> ADDASSIGN
Rule 27    assign_operator -> SUBASSIGN
Rule 28    assign_operator -> MULASSIGN
Rule 29    assign_operator -> DIVASSIGN
Rule 30    assign_operator -> =
Rule 31    instr_assign -> id assign_operator expr
Rule 32    instr_assign -> matrix_element assign_operator expr
Rule 33    instr_assign -> vector_element assign_operator expr
Rule 34    id -> ID
Rule 35    trans -> expr '
Rule 36    uminus -> - expr
Rule 37    expr -> expr + expr
Rule 38    expr -> expr - expr
Rule 39    expr -> expr * expr
Rule 40    expr -> expr / expr
Rule 41    expr -> expr DOTADD expr
Rule 42    expr -> expr DOTSUB expr
Rule 43    expr -> expr DOTMUL expr
Rule 44    expr -> expr DOTDIV expr
Rule 45    expr -> num_expr
Rule 46    expr -> matrix
Rule 47    expr -> matrix_create
Rule 48    expr -> vector
Rule 49    expr -> uminus
Rule 50    expr -> trans
Rule 51    expr -> matrix_element
Rule 52    expr -> vector_element
Rule 53    num_expr -> number
Rule 54    num_expr -> str
Rule 55    num_expr -> id
Rule 56    matrix -> [ vectors ]
Rule 57    matrix_create -> ZEROS ( INTNUM )
Rule 58    matrix_create -> ONES ( INTNUM )
Rule 59    matrix_create -> EYE ( INTNUM )
Rule 60    vectors -> vectors , vector
Rule 61    vectors -> vector
Rule 62    vector -> [ variables ]
Rule 63    variables -> variables , variable
Rule 64    variables -> variable
Rule 65    variable -> number
Rule 66    variable -> id
Rule 67    variable -> element
Rule 68    number -> INTNUM
Rule 69    number -> FLOAT
Rule 70    element -> vector_element
Rule 71    element -> matrix_element
Rule 72    vector_element -> id [ INTNUM ]
Rule 73    matrix_element -> id [ INTNUM , INTNUM ]

Terminals, with rules where they appear

'                    : 35
(                    : 7 8 18 57 58 59
)                    : 7 8 18 57 58 59
*                    : 39
+                    : 37
,                    : 24 60 63 73
-                    : 36 38
/                    : 40
:                    : 17
;                    : 4 5
<                    : 11
=                    : 16 30
>                    : 10
ADDASSIGN            : 26
BREAK                : 19
CONTINUE             : 20
DIVASSIGN            : 29
DOTADD               : 41
DOTDIV               : 44
DOTMUL               : 43
DOTSUB               : 42
ELSE                 : 8
EQ                   : 12
EYE                  : 59
FLOAT                : 69
FOR                  : 16
GEQ                  : 15
ID                   : 34
IF                   : 7 8
INTNUM               : 57 58 59 68 72 73 73
LEQ                  : 14
MULASSIGN            : 28
NEQ                  : 13
ONES                 : 58
PRINT                : 22
RETURN               : 9
STRING               : 21
SUBASSIGN            : 27
WHILE                : 18
ZEROS                : 57
[                    : 56 62 72 73
]                    : 56 62 72 73
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assign_operator      : 31 32 33
condition            : 7 8
element              : 67
expr                 : 9 10 10 11 11 12 12 13 13 14 14 15 15 17 17 18 25 31 32 33 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44
id                   : 16 31 55 66 72 73
instr                : 2 3 7 8 8 16 18
instr_assign         : 4
instructions         : 1 3 6
matrix               : 46
matrix_create        : 47
matrix_element       : 32 51 71
num_expr             : 45
number               : 53 65
printable            : 23 24
printables           : 22 24
range                : 16
start                : 0
statement            : 5
str                  : 54
trans                : 50
uminus               : 49
variable             : 63 64
variables            : 62 63
vector               : 48 60 61
vector_element       : 33 52 70
vectors              : 56 60

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instructions
    (2) instructions -> . instr
    (3) instructions -> . instructions instr
    (4) instr -> . instr_assign ;
    (5) instr -> . statement ;
    (6) instr -> . { instructions }
    (7) instr -> . IF ( condition ) instr
    (8) instr -> . IF ( condition ) instr ELSE instr
    (16) instr -> . FOR id = range instr
    (18) instr -> . WHILE ( expr ) instr
    (31) instr_assign -> . id assign_operator expr
    (32) instr_assign -> . matrix_element assign_operator expr
    (33) instr_assign -> . vector_element assign_operator expr
    (9) statement -> . RETURN expr
    (19) statement -> . BREAK
    (20) statement -> . CONTINUE
    (22) statement -> . PRINT printables
    (34) id -> . ID
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]

    {               shift and go to state 6
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 10
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    PRINT           shift and go to state 16
    ID              shift and go to state 17

    start                          shift and go to state 1
    instructions                   shift and go to state 2
    instr                          shift and go to state 3
    instr_assign                   shift and go to state 4
    statement                      shift and go to state 5
    id                             shift and go to state 9
    matrix_element                 shift and go to state 11
    vector_element                 shift and go to state 12

state 1

    (0) S' -> start .



state 2

    (1) start -> instructions .
    (3) instructions -> instructions . instr
    (4) instr -> . instr_assign ;
    (5) instr -> . statement ;
    (6) instr -> . { instructions }
    (7) instr -> . IF ( condition ) instr
    (8) instr -> . IF ( condition ) instr ELSE instr
    (16) instr -> . FOR id = range instr
    (18) instr -> . WHILE ( expr ) instr
    (31) instr_assign -> . id assign_operator expr
    (32) instr_assign -> . matrix_element assign_operator expr
    (33) instr_assign -> . vector_element assign_operator expr
    (9) statement -> . RETURN expr
    (19) statement -> . BREAK
    (20) statement -> . CONTINUE
    (22) statement -> . PRINT printables
    (34) id -> . ID
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]

    $end            reduce using rule 1 (start -> instructions .)
    {               shift and go to state 6
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 10
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    PRINT           shift and go to state 16
    ID              shift and go to state 17

    instr                          shift and go to state 18
    instr_assign                   shift and go to state 4
    statement                      shift and go to state 5
    id                             shift and go to state 9
    matrix_element                 shift and go to state 11
    vector_element                 shift and go to state 12

state 3

    (2) instructions -> instr .

    {               reduce using rule 2 (instructions -> instr .)
    IF              reduce using rule 2 (instructions -> instr .)
    FOR             reduce using rule 2 (instructions -> instr .)
    WHILE           reduce using rule 2 (instructions -> instr .)
    RETURN          reduce using rule 2 (instructions -> instr .)
    BREAK           reduce using rule 2 (instructions -> instr .)
    CONTINUE        reduce using rule 2 (instructions -> instr .)
    PRINT           reduce using rule 2 (instructions -> instr .)
    ID              reduce using rule 2 (instructions -> instr .)
    $end            reduce using rule 2 (instructions -> instr .)
    }               reduce using rule 2 (instructions -> instr .)


state 4

    (4) instr -> instr_assign . ;

    ;               shift and go to state 19


state 5

    (5) instr -> statement . ;

    ;               shift and go to state 20


state 6

    (6) instr -> { . instructions }
    (2) instructions -> . instr
    (3) instructions -> . instructions instr
    (4) instr -> . instr_assign ;
    (5) instr -> . statement ;
    (6) instr -> . { instructions }
    (7) instr -> . IF ( condition ) instr
    (8) instr -> . IF ( condition ) instr ELSE instr
    (16) instr -> . FOR id = range instr
    (18) instr -> . WHILE ( expr ) instr
    (31) instr_assign -> . id assign_operator expr
    (32) instr_assign -> . matrix_element assign_operator expr
    (33) instr_assign -> . vector_element assign_operator expr
    (9) statement -> . RETURN expr
    (19) statement -> . BREAK
    (20) statement -> . CONTINUE
    (22) statement -> . PRINT printables
    (34) id -> . ID
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]

    {               shift and go to state 6
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 10
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    PRINT           shift and go to state 16
    ID              shift and go to state 17

    instructions                   shift and go to state 21
    instr                          shift and go to state 3
    instr_assign                   shift and go to state 4
    statement                      shift and go to state 5
    id                             shift and go to state 9
    matrix_element                 shift and go to state 11
    vector_element                 shift and go to state 12

state 7

    (7) instr -> IF . ( condition ) instr
    (8) instr -> IF . ( condition ) instr ELSE instr

    (               shift and go to state 22


state 8

    (16) instr -> FOR . id = range instr
    (34) id -> . ID

    ID              shift and go to state 17

    id                             shift and go to state 23

state 9

    (31) instr_assign -> id . assign_operator expr
    (73) matrix_element -> id . [ INTNUM , INTNUM ]
    (72) vector_element -> id . [ INTNUM ]
    (26) assign_operator -> . ADDASSIGN
    (27) assign_operator -> . SUBASSIGN
    (28) assign_operator -> . MULASSIGN
    (29) assign_operator -> . DIVASSIGN
    (30) assign_operator -> . =

    [               shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    =               shift and go to state 30

    assign_operator                shift and go to state 24

state 10

    (18) instr -> WHILE . ( expr ) instr

    (               shift and go to state 31


state 11

    (32) instr_assign -> matrix_element . assign_operator expr
    (26) assign_operator -> . ADDASSIGN
    (27) assign_operator -> . SUBASSIGN
    (28) assign_operator -> . MULASSIGN
    (29) assign_operator -> . DIVASSIGN
    (30) assign_operator -> . =

    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    =               shift and go to state 30

    assign_operator                shift and go to state 32

state 12

    (33) instr_assign -> vector_element . assign_operator expr
    (26) assign_operator -> . ADDASSIGN
    (27) assign_operator -> . SUBASSIGN
    (28) assign_operator -> . MULASSIGN
    (29) assign_operator -> . DIVASSIGN
    (30) assign_operator -> . =

    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 27
    MULASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    =               shift and go to state 30

    assign_operator                shift and go to state 33

state 13

    (9) statement -> RETURN . expr
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr DOTADD expr
    (42) expr -> . expr DOTSUB expr
    (43) expr -> . expr DOTMUL expr
    (44) expr -> . expr DOTDIV expr
    (45) expr -> . num_expr
    (46) expr -> . matrix
    (47) expr -> . matrix_create
    (48) expr -> . vector
    (49) expr -> . uminus
    (50) expr -> . trans
    (51) expr -> . matrix_element
    (52) expr -> . vector_element
    (53) num_expr -> . number
    (54) num_expr -> . str
    (55) num_expr -> . id
    (56) matrix -> . [ vectors ]
    (57) matrix_create -> . ZEROS ( INTNUM )
    (58) matrix_create -> . ONES ( INTNUM )
    (59) matrix_create -> . EYE ( INTNUM )
    (62) vector -> . [ variables ]
    (36) uminus -> . - expr
    (35) trans -> . expr '
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]
    (68) number -> . INTNUM
    (69) number -> . FLOAT
    (21) str -> . STRING
    (34) id -> . ID

    [               shift and go to state 47
    ZEROS           shift and go to state 48
    ONES            shift and go to state 50
    EYE             shift and go to state 51
    -               shift and go to state 35
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 52
    STRING          shift and go to state 53
    ID              shift and go to state 17

    expr                           shift and go to state 34
    num_expr                       shift and go to state 36
    matrix                         shift and go to state 37
    matrix_create                  shift and go to state 38
    vector                         shift and go to state 39
    uminus                         shift and go to state 40
    trans                          shift and go to state 41
    matrix_element                 shift and go to state 42
    vector_element                 shift and go to state 43
    number                         shift and go to state 44
    str                            shift and go to state 45
    id                             shift and go to state 46

state 14

    (19) statement -> BREAK .

    ;               reduce using rule 19 (statement -> BREAK .)


state 15

    (20) statement -> CONTINUE .

    ;               reduce using rule 20 (statement -> CONTINUE .)


state 16

    (22) statement -> PRINT . printables
    (23) printables -> . printable
    (24) printables -> . printables , printable
    (25) printable -> . expr
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr DOTADD expr
    (42) expr -> . expr DOTSUB expr
    (43) expr -> . expr DOTMUL expr
    (44) expr -> . expr DOTDIV expr
    (45) expr -> . num_expr
    (46) expr -> . matrix
    (47) expr -> . matrix_create
    (48) expr -> . vector
    (49) expr -> . uminus
    (50) expr -> . trans
    (51) expr -> . matrix_element
    (52) expr -> . vector_element
    (53) num_expr -> . number
    (54) num_expr -> . str
    (55) num_expr -> . id
    (56) matrix -> . [ vectors ]
    (57) matrix_create -> . ZEROS ( INTNUM )
    (58) matrix_create -> . ONES ( INTNUM )
    (59) matrix_create -> . EYE ( INTNUM )
    (62) vector -> . [ variables ]
    (36) uminus -> . - expr
    (35) trans -> . expr '
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]
    (68) number -> . INTNUM
    (69) number -> . FLOAT
    (21) str -> . STRING
    (34) id -> . ID

    [               shift and go to state 47
    ZEROS           shift and go to state 48
    ONES            shift and go to state 50
    EYE             shift and go to state 51
    -               shift and go to state 35
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 52
    STRING          shift and go to state 53
    ID              shift and go to state 17

    printables                     shift and go to state 54
    printable                      shift and go to state 55
    expr                           shift and go to state 56
    num_expr                       shift and go to state 36
    matrix                         shift and go to state 37
    matrix_create                  shift and go to state 38
    vector                         shift and go to state 39
    uminus                         shift and go to state 40
    trans                          shift and go to state 41
    matrix_element                 shift and go to state 42
    vector_element                 shift and go to state 43
    number                         shift and go to state 44
    str                            shift and go to state 45
    id                             shift and go to state 46

state 17

    (34) id -> ID .

    [               reduce using rule 34 (id -> ID .)
    ADDASSIGN       reduce using rule 34 (id -> ID .)
    SUBASSIGN       reduce using rule 34 (id -> ID .)
    MULASSIGN       reduce using rule 34 (id -> ID .)
    DIVASSIGN       reduce using rule 34 (id -> ID .)
    =               reduce using rule 34 (id -> ID .)
    +               reduce using rule 34 (id -> ID .)
    -               reduce using rule 34 (id -> ID .)
    *               reduce using rule 34 (id -> ID .)
    /               reduce using rule 34 (id -> ID .)
    DOTADD          reduce using rule 34 (id -> ID .)
    DOTSUB          reduce using rule 34 (id -> ID .)
    DOTMUL          reduce using rule 34 (id -> ID .)
    DOTDIV          reduce using rule 34 (id -> ID .)
    '               reduce using rule 34 (id -> ID .)
    ;               reduce using rule 34 (id -> ID .)
    ,               reduce using rule 34 (id -> ID .)
    >               reduce using rule 34 (id -> ID .)
    <               reduce using rule 34 (id -> ID .)
    EQ              reduce using rule 34 (id -> ID .)
    NEQ             reduce using rule 34 (id -> ID .)
    LEQ             reduce using rule 34 (id -> ID .)
    GEQ             reduce using rule 34 (id -> ID .)
    )               reduce using rule 34 (id -> ID .)
    :               reduce using rule 34 (id -> ID .)
    {               reduce using rule 34 (id -> ID .)
    IF              reduce using rule 34 (id -> ID .)
    FOR             reduce using rule 34 (id -> ID .)
    WHILE           reduce using rule 34 (id -> ID .)
    RETURN          reduce using rule 34 (id -> ID .)
    BREAK           reduce using rule 34 (id -> ID .)
    CONTINUE        reduce using rule 34 (id -> ID .)
    PRINT           reduce using rule 34 (id -> ID .)
    ID              reduce using rule 34 (id -> ID .)
    ]               reduce using rule 34 (id -> ID .)


state 18

    (3) instructions -> instructions instr .

    {               reduce using rule 3 (instructions -> instructions instr .)
    IF              reduce using rule 3 (instructions -> instructions instr .)
    FOR             reduce using rule 3 (instructions -> instructions instr .)
    WHILE           reduce using rule 3 (instructions -> instructions instr .)
    RETURN          reduce using rule 3 (instructions -> instructions instr .)
    BREAK           reduce using rule 3 (instructions -> instructions instr .)
    CONTINUE        reduce using rule 3 (instructions -> instructions instr .)
    PRINT           reduce using rule 3 (instructions -> instructions instr .)
    ID              reduce using rule 3 (instructions -> instructions instr .)
    $end            reduce using rule 3 (instructions -> instructions instr .)
    }               reduce using rule 3 (instructions -> instructions instr .)


state 19

    (4) instr -> instr_assign ; .

    {               reduce using rule 4 (instr -> instr_assign ; .)
    IF              reduce using rule 4 (instr -> instr_assign ; .)
    FOR             reduce using rule 4 (instr -> instr_assign ; .)
    WHILE           reduce using rule 4 (instr -> instr_assign ; .)
    RETURN          reduce using rule 4 (instr -> instr_assign ; .)
    BREAK           reduce using rule 4 (instr -> instr_assign ; .)
    CONTINUE        reduce using rule 4 (instr -> instr_assign ; .)
    PRINT           reduce using rule 4 (instr -> instr_assign ; .)
    ID              reduce using rule 4 (instr -> instr_assign ; .)
    $end            reduce using rule 4 (instr -> instr_assign ; .)
    }               reduce using rule 4 (instr -> instr_assign ; .)
    ELSE            reduce using rule 4 (instr -> instr_assign ; .)


state 20

    (5) instr -> statement ; .

    {               reduce using rule 5 (instr -> statement ; .)
    IF              reduce using rule 5 (instr -> statement ; .)
    FOR             reduce using rule 5 (instr -> statement ; .)
    WHILE           reduce using rule 5 (instr -> statement ; .)
    RETURN          reduce using rule 5 (instr -> statement ; .)
    BREAK           reduce using rule 5 (instr -> statement ; .)
    CONTINUE        reduce using rule 5 (instr -> statement ; .)
    PRINT           reduce using rule 5 (instr -> statement ; .)
    ID              reduce using rule 5 (instr -> statement ; .)
    $end            reduce using rule 5 (instr -> statement ; .)
    }               reduce using rule 5 (instr -> statement ; .)
    ELSE            reduce using rule 5 (instr -> statement ; .)


state 21

    (6) instr -> { instructions . }
    (3) instructions -> instructions . instr
    (4) instr -> . instr_assign ;
    (5) instr -> . statement ;
    (6) instr -> . { instructions }
    (7) instr -> . IF ( condition ) instr
    (8) instr -> . IF ( condition ) instr ELSE instr
    (16) instr -> . FOR id = range instr
    (18) instr -> . WHILE ( expr ) instr
    (31) instr_assign -> . id assign_operator expr
    (32) instr_assign -> . matrix_element assign_operator expr
    (33) instr_assign -> . vector_element assign_operator expr
    (9) statement -> . RETURN expr
    (19) statement -> . BREAK
    (20) statement -> . CONTINUE
    (22) statement -> . PRINT printables
    (34) id -> . ID
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]

    }               shift and go to state 57
    {               shift and go to state 6
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 10
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    PRINT           shift and go to state 16
    ID              shift and go to state 17

    instr                          shift and go to state 18
    instr_assign                   shift and go to state 4
    statement                      shift and go to state 5
    id                             shift and go to state 9
    matrix_element                 shift and go to state 11
    vector_element                 shift and go to state 12

state 22

    (7) instr -> IF ( . condition ) instr
    (8) instr -> IF ( . condition ) instr ELSE instr
    (10) condition -> . expr > expr
    (11) condition -> . expr < expr
    (12) condition -> . expr EQ expr
    (13) condition -> . expr NEQ expr
    (14) condition -> . expr LEQ expr
    (15) condition -> . expr GEQ expr
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr DOTADD expr
    (42) expr -> . expr DOTSUB expr
    (43) expr -> . expr DOTMUL expr
    (44) expr -> . expr DOTDIV expr
    (45) expr -> . num_expr
    (46) expr -> . matrix
    (47) expr -> . matrix_create
    (48) expr -> . vector
    (49) expr -> . uminus
    (50) expr -> . trans
    (51) expr -> . matrix_element
    (52) expr -> . vector_element
    (53) num_expr -> . number
    (54) num_expr -> . str
    (55) num_expr -> . id
    (56) matrix -> . [ vectors ]
    (57) matrix_create -> . ZEROS ( INTNUM )
    (58) matrix_create -> . ONES ( INTNUM )
    (59) matrix_create -> . EYE ( INTNUM )
    (62) vector -> . [ variables ]
    (36) uminus -> . - expr
    (35) trans -> . expr '
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]
    (68) number -> . INTNUM
    (69) number -> . FLOAT
    (21) str -> . STRING
    (34) id -> . ID

    [               shift and go to state 47
    ZEROS           shift and go to state 48
    ONES            shift and go to state 50
    EYE             shift and go to state 51
    -               shift and go to state 35
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 52
    STRING          shift and go to state 53
    ID              shift and go to state 17

    condition                      shift and go to state 58
    expr                           shift and go to state 59
    num_expr                       shift and go to state 36
    matrix                         shift and go to state 37
    matrix_create                  shift and go to state 38
    vector                         shift and go to state 39
    uminus                         shift and go to state 40
    trans                          shift and go to state 41
    matrix_element                 shift and go to state 42
    vector_element                 shift and go to state 43
    number                         shift and go to state 44
    str                            shift and go to state 45
    id                             shift and go to state 46

state 23

    (16) instr -> FOR id . = range instr

    =               shift and go to state 60


state 24

    (31) instr_assign -> id assign_operator . expr
    (37) expr -> . expr + expr
    (38) expr -> . expr - expr
    (39) expr -> . expr * expr
    (40) expr -> . expr / expr
    (41) expr -> . expr DOTADD expr
    (42) expr -> . expr DOTSUB expr
    (43) expr -> . expr DOTMUL expr
    (44) expr -> . expr DOTDIV expr
    (45) expr -> . num_expr
    (46) expr -> . matrix
    (47) expr -> . matrix_create
    (48) expr -> . vector
    (49) expr -> . uminus
    (50) expr -> . trans
    (51) expr -> . matrix_element
    (52) expr -> . vector_element
    (53) num_expr -> . number
    (54) num_expr -> . str
    (55) num_expr -> . id
    (56) matrix -> . [ vectors ]
    (57) matrix_create -> . ZEROS ( INTNUM )
    (58) matrix_create -> . ONES ( INTNUM )
    (59) matrix_create -> . EYE ( INTNUM )
    (62) vector -> . [ variables ]
    (36) uminus -> . - expr
    (35) trans -> . expr '
    (73) matrix_element -> . id [ INTNUM , INTNUM ]
    (72) vector_element -> . id [ INTNUM ]
    (68) number -> . INTNUM
    (69) number -> . FLOAT
    (21) str -> . STRING
    (34) id -> . ID

    [               shift and go to state 47
    ZEROS           shift and go to state 48
    ONES            shift and go to state 50
    EYE             shift and go to state 51
    -               shift and go to state 35
    INTNUM          shift and go to state 49
    FLOAT           shift and go to state 52
    STRING          shift and go to state 53
    ID              shift and go to state 17

    id                             shift and go to state 46
    expr                           shift and go to state 61
    num_expr                       shift and go to state 36
    matrix                         shift and go to state 37
    matrix_create                  shift and go to state 38
    vector                         shift and go to state 39
    uminus                         shift and go to state 40
    trans                          shift and go to state 41
    matrix_element                 shift and go to state 42
    vector_element                 shift and go to state 43
    number                         shift and go to state 44
    str                            shift and go to state 45

state 25

    (73) matrix_element -> id [ . INTNUM , INTNUM ]
    (72) vector_element -> id [ . INTNUM ]

    INTNUM          shift and go to state 62


state 26

    (26) assign_operator -> ADDASSIGN .

    [               reduce using rule 26 (assign_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 26 (assign_operator -> ADDASSIGN .)
    ONES            reduce using rule 26 (assign_operator -> ADDASSIGN .)
    EYE             reduce using rule 26 (assign_operator -> ADDASSIGN .)
    -               reduce using rule 26 (assign_operator -> ADDASSIGN .)
    INTNUM          reduce using rule 26 (assign_operator -> ADDASSIGN .)
    FLOAT           reduce using rule 26 (assign_operator -> ADDASSIGN .)
    STRING          reduce using rule 26 (assign_operator -> ADDASSIGN .)
    ID              reduce using rule 26 (assign_operator -> ADDASSIGN .)


state 27

    (27) assign_operator -> SUBASSIGN .

    [               reduce using rule 27 (assign_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 27 (assign_operator -> SUBASSIGN .)
    ONES            reduce using rule 27 (assign_operator -> SUBASSIGN .)
    EYE             reduce using rule 27 (assign_operator -> SUBASSIGN .)
    -               reduce using rule 27 (assign_operator -> SUBASSIGN .)
    INTNUM          reduce using rule 27 (assign_operator -> SUBASSIGN .)
    FLOAT           reduce using rule 27 (assign_operator -> SUBASSIGN .)
    STRING          reduce using rule 27 (assign_operator -> SUBASSIGN .)
    ID              reduce using rule 27 (assign_operator -> SUBASSIGN .)


state 28

    (28) assign_operator -> MULASSIGN .
